NCC/NCCjudge/judge/error/25/25_2.txt
/home/saurabh/CTD/NCC/judge/user/25/2/25_2.cpp:1:25: error: ‘gggggggggg’ does not name a type
 /*Type your code here!*/gggggggggg
                         ^
